fix(MainLayout): correct z-index for bg and content

--- a/src/styles/layouts/_main-layout.scss
+++ b/src/styles/layouts/_main-layout.scss
@@ -37,7 +37,7 @@
     top: 0;
     right: 0;
     bottom: 0;
-    z-index: -1;
+    z-index: -2;
 
     background: $bg-gradient;
   }
@@ -48,7 +48,7 @@
     top: 0;
     right: 0;
     bottom: 0;
-    z-index: 0;
+    z-index: -1;
   }
 
   // TODO change positions to percents
